fix(zoom): more spacing around the zoom buttons

--- a/packages/studio-ui/src/web/views/FlowBuilder/diagram/ZoomToolbar/style.scss
+++ b/packages/studio-ui/src/web/views/FlowBuilder/diagram/ZoomToolbar/style.scss
@@ -53,6 +53,10 @@
   }
 }
 
+.zoomToFit {
+  margin-left: var(--spacing-small);
+}
+
 .zoomLevel {
   background: #fff;
 }
